[package]
name = "fiberplane-api-client"
edition = "2021"

[package.version]
workspace = true

[package.license]
workspace = true

[dependencies]
anyhow = "1"
bytes = "1"
secrecy = "0"
serde_json = "1"

[dependencies.base64uuid]
features = []
workspace = true

[dependencies.fiberplane-models]
features = []
workspace = true

[dependencies.reqwest]
version = "0.11"
features = ["gzip", "json", "multipart", "rustls-tls"]
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]
default-features = false

[dependencies.time]
version = "0.3"
features = ["formatting", "parsing", "serde-human-readable", "serde-well-known"]
default-features = false

[lib]
path = "src/lib.rs"
name = "fiberplane_api_client"
edition = "2021"
crate-type = ["rlib"]
required-features = []
