[package]
name = "fiberplane"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["lib"]

[features]
api-client = ["fiberplane-api-client"]
base64uuid-creation = ["base64uuid/creation"]
clap = ["fiberplane-models?/clap"]
fp-bindgen = ["base64uuid?/fp-bindgen", "fiberplane-models?/fp-bindgen"]
markdown = ["fiberplane-markdown"]
models = ["fiberplane-models"]
provider-bindings = ["fiberplane-provider-bindings"]
provider-runtime = ["fiberplane-provider-runtime"]
sqlx = ["base64uuid?/sqlx", "fiberplane-models?/sqlx"]
string-utils = ["fiberplane-string-utils"]
templates = ["fiberplane-templates"]

[dependencies]
base64uuid = { path = "../base64uuid", default-features = false, optional = true }
fiberplane-api-client = { path = "../fiberplane-api-client", optional = true }
fiberplane-markdown = { path = "../fiberplane-markdown", optional = true }
fiberplane-models = { path = "../fiberplane-models", optional = true }
fiberplane-provider-bindings = { workspace = true, optional = true }
fiberplane-provider-runtime = { path = "../fiberplane-provider-protocol/fiberplane-provider-runtime", optional = true }
fiberplane-string-utils = { path = "../fiberplane-string-utils", optional = true }
fiberplane-templates = { path = "../fiberplane-templates", optional = true }
