[package]
name = "fp-provider-protocol"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
bytes = { workspace = true }
fiberplane = { path = "../fiberplane" }
fp-bindgen = { workspace = true, features = ["bytes-compat", "generators"] }
serde_json = { workspace = true }
