[package]
name = "fp-templates"
version = "0.1.0"
edition = "2021"

[features]
default = ["convert", "expand", "examples"]
convert = ["lazy_static", "regex", "time"]
expand = ["jrsonnet-evaluator", "jrsonnet-types", "thiserror", "time", "types"]
types = ["serde", "serde_json"]
examples = []

[dependencies]
fiberplane = { path = "../fiberplane"}
lazy_static = { version = "1.4.0", optional = true }
jrsonnet-evaluator =  { version = "0.4.2", optional = true }
jrsonnet-types = { version = "0.4.2", optional = true }
regex = { version = "1.5.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1.0.30", optional = true }
time = { version = "0.3.14", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
pretty_assertions = "1.3"
