[package]
name = "time_util"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.44"
serde = { workspace = true }
time = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
clap = { version = "3.0.5", features = ["derive", "env", "wrap_help"] }
