[package]
name = "elasticsearch-provider"
version = "0.1.0"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
elasticsearch-dsl = "0.1"
fp-provider-bindings = { path = "../../fp-provider-protocol/fp-provider-bindings" }
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.7", features = ["serde", "serde-well-known"] }
url = { version = "2.2.2", features = ["serde"] }
