[package]
name = "loki-provider"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13"
fp-provider-bindings = { path = "../../fp-provider-protocol/fp-provider-bindings" }
serde = { workspace = true }
serde_json = { workspace = true }
url = { version = "2.2.2", features = ["serde"] }
