[package]
name = "prometheus-provider"
version = "0.1.0"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
const_format = "0.2"
fiberplane = { path = "../../fiberplane" }
form_urlencoded = "1"
fp-provider-bindings = { path = "../../fp-provider-protocol/fp-provider-bindings" }
rmp-serde = "1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.4", features = ["formatting"] }
url = "2.2.2"
