[package]
name = "prometheus-provider"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
const_format = "0.2"
fiberplane = { path = "../../fiberplane" }
form_urlencoded = "1"
fp-provider-bindings = { path = "../../fp-provider-protocol/fp-provider-bindings" }
grafana-common = { path = "../grafana-common" }
rmp-serde = "1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting"] }
url = { version = "2.2.2", features = ["serde"] }

[build-dependencies]
vergen = { workspace = true }
