[package]
name = "proxy-provider"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
fp-provider-bindings = { path = "../../fp-provider-protocol/fp-provider-bindings" }
rmp-serde = "1.0.0"
urlencoding = "2"
