[package]
name = "sentry-provider"
version = "0.1.0"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
form_urlencoded = "1"
fiberplane = { path = "../../fiberplane" }
fp-provider-bindings = { path = "../../fp-provider-protocol/fp-provider-bindings" }
futures = "0.3"
percent-encoding = "2.1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.11", features = ["formatting", "parsing"] }
url = "2.2.2"
