[package]
name = "sentry-provider"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
form_urlencoded = "1"
fiberplane = { path = "../../fiberplane" }
fp-provider-bindings = { path = "../../fp-provider-protocol/fp-provider-bindings" }
futures = "0.3"
percent-encoding = "2.1"
rmp-serde = "1"
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing"] }
url = "2.2.2"
